hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello-world
  ports:
    - port: 80
      targetPort: 5678
  type: ClusterIP
